--- a/Sneakerz-Website/src/main/webapp/WEB-INF/web.xml
+++ b/Sneakerz-Website/src/main/webapp/WEB-INF/web.xml
@@ -4,3 +4,15 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 </web-app>
+
+<!--
+<web-app>
+<servlet>
+    <servlet-name>RegisterServlet</servlet-name>
+    <servlet-class>lk.sneakerz.sneakerzwebsite.RegisterServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>RegisterServlet</servlet-name>
+    <url-pattern>/RegisterServlet</url-pattern>
+</servlet-mapping>
+</web-app>-->
