--- a/Sneakerz-Website/pom.xml
+++ b/Sneakerz-Website/pom.xml
@@ -53,6 +53,20 @@
           <version>5.0.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>4.0.1</version>
+          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>javax.servlet.jsp.jstl</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
+
+
   </dependencies>
 
   <build>
